# lunchcr

./: .gitignore  README.md  config.cfg  pyproject.toml  ruff.toml  ty.toml
src/: main.py  utils.py
src/entities/: bac.py  base.py  payoneer.py  scotiabank.py
