[tool.poetry]
name = "lunchcr"
version = "0.1.0"
description = ""
authors = ["Cherny D. C. Berbesí I. <cherny.berbesi@protonmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
lunchable = "*"
python-slugify = "^6.1.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^24.3.0", allow-prereleases = true}
pylint = "^2.13.7"

[tool.poetry.group.dev.dependencies]
black = {version = "^24.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
